--- a/Home.css
+++ b/Home.css
@@ -26,6 +26,7 @@ section{
   position: relative;
   width: 100%;
   overflow: hidden;
+  z-index: 1000;
 }
 section .scroll{
   width: 100%;
@@ -36,8 +37,8 @@ section .scroll div{
   font-size: 35px;
   white-space: nowrap;
   text-transform: uppercase;
-  animation: animate 60s linear infinite;
-  animation-delay: -15s;
+  animation: animate 140s linear infinite;
+  animation-delay: -35s;
 }
 @keyframes animate{
   0%{
@@ -48,8 +49,8 @@ section .scroll div{
   }
 }
 section .scroll div:nth-child(2){
-  animation: animate2 60s linear infinite;
-  animation-delay: 15s;
+  animation: animate2 140s linear infinite;
+  animation-delay: 35s;
 }
 @keyframes animate2{
   0%{
@@ -60,15 +61,16 @@ section .scroll div:nth-child(2){
   }
 }
 .svgcontainer{
-    width: 100vw;
-    height: 100vw;
-    position: fixed;
-    text-align: center;
-    margin-top: 10%;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #Layer_1{
-  width: 500px;
-  display: inline-block;
+  width: 25%;
+  margin: 0 auto;
   animation: rotate 5s linear infinite;
 }
 @keyframes rotate{
@@ -93,21 +95,6 @@ section .scroll div:nth-child(2){
   text-align: center;
   z-index: 1000;
 }
-#logo{
-  width: 50px;
-  animation: rotate 5s linear infinite;
-}
-.nav .home{
-  width: 6.5%;
-  border-right-width: 3px;
-}
-.home:hover{
-  border-color: var(--mainColor);
-  border-width: 5px;
-}
-.home:hover #logo{
-  fill: var(--mainColor);
-}
 .about:hover{
   color: var(--mainColor);
   border-color: var(--mainColor);
@@ -115,7 +102,7 @@ section .scroll div:nth-child(2){
 }
 #about{
   color: var(--mainColor);
-  padding: 250px 50px 0 50px;
+  padding: 150px 7% 0 7%;
   text-align: left;
   position: fixed;
   width: 100vw;
@@ -125,11 +112,13 @@ section .scroll div:nth-child(2){
   top: 0;
   left: 0;
   border: none;
-  font-size: 40px;
+  font-size: 45px;
+  text-transform: none;
 }
 #me{
-  width: 250px;
-  margin: 0 20px 0 0;
+  width: 20%;
+  float: left;
+  margin-right: 10px;
 }
 .description{
   color: black;
@@ -178,7 +167,6 @@ section .scroll div:nth-child(2){
 .dropdown li:hover{
   color: var(--mainColor);
   border-color: var(--mainColor);
-  border-width: 5px;
   z-index: 2;
 }
 .dropdown li:nth-child(n+2){
@@ -200,11 +188,11 @@ section .scroll div:nth-child(2){
   bottom: 10;
 }
 .portfolio{
-  width: 60%;
+  width: 70%;
   margin: auto;
-  font-size: 100px;
+  font-size: 50px;
+  letter-spacing: -2px;
   text-transform: uppercase;
-  letter-spacing: -5px;
   text-decoration: underline;
   color: black;
 }
@@ -213,4 +201,159 @@ section .scroll div:nth-child(2){
   transition-delay: .05s;
   transition-timing-function: ease-in;
   color: #d9a8ff;
+}
+@media screen and (max-width: 1000px){
+  #about{
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 900px){
+  #about{
+    font-size: 25px;
+  }
+  #Layer_1{
+    width: 40%;
+  }
+}
+@media screen and (max-width: 800px){
+  .nav{
+    margin-bottom: 75px;
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 650px){
+  .nav{
+    margin-bottom: 75px;
+    font-size: 25px;
+  }
+  section .scroll div{
+    font-size: 25px;
+  }
+  .nav li{
+    display: inline-block;
+    border: 4px solid black;
+    padding: 10px 0 10px 0;
+    width: 50vw;
+    text-align: center;
+    z-index: 1000;
+  }
+  .nav .about{
+    border-right-width: 2px;
+  }
+  .nav .work{
+    border-left-width: 2px;
+  }
+  .dropdown li{
+    width: 100%;
+    z-index: 1;
+  }
+  .dropdown li:hover{
+    color: var(--mainColor);
+    border-color: var(--mainColor);
+    z-index: 2;
+  }
+  .dropdown li:nth-child(n+2){
+    margin-top: -4px;
+  }
+  .work:hover{
+    border-width: 4px;
+  }
+  .about:hover{
+    border-width: 4px;
+  }
+  #about{
+    background-image: radial-gradient(#d0ff00 10%, #e8e8e8 60%);
+    padding: 150px 7% 0 7%;
+    text-align: center;
+    font-size: 25px;
+  }
+  #me{
+    display: inline-block;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+  }
+  .description{
+    display: inline-block;
+    margin-top: 10px;
+  }
+}
+@media screen and (max-device-width: 425px){
+  section .scroll div{
+    color: #d9a8ff;
+    font-size: 25px;
+    white-space: nowrap;
+    text-transform: uppercase;
+    animation: animate 80s linear infinite;
+    animation-delay: -20s;
+  }
+  section .scroll div:nth-child(2){
+    animation: animate2 80s linear infinite;
+    animation-delay: 20s;
+  }
+  #Layer_1{
+    width: 50%;
+    margin: 0 auto;
+    animation: rotate 5s linear infinite;
+  }
+  .nav{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 75px;
+    font-size: 35px;
+  }
+  .nav li{
+    display: inline-block;
+    border: 4px solid black;
+    padding: 10px 0 10px 0;
+    width: 100vw;
+    text-align: center;
+    z-index: 1000;
+    border-left: none;
+    border-right: none;
+  }
+  .about:hover{
+    border-width: 4px;
+  }
+  .nav .about{
+    border-bottom-width: 2px;
+  }
+  #home{
+    border: 2px solid black;
+    width: 100vw;
+  }
+  #about{
+    background-image: radial-gradient(#d0ff00 10%, #e8e8e8 60%);
+    padding: 50% 5% 0 5%;
+    text-align: center;
+    font-size: 18px;
+  }
+  #me{
+    display: inline-block;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+  }
+  .description{
+    display: inline-block;
+    margin-top: 10px;
+  }
+  .nav .work{
+    border-top-width: 2px;
+  }
+  .dropdown li:nth-child(n+2){
+    margin-top: -4px;
+  }
+  .portfolio{
+    width:100%;
+    margin: auto;
+    font-size: 45px;
+    text-transform: uppercase;
+    letter-spacing: -2px;
+    text-decoration: underline;
+    color: black;
+  }
 }
